cmake_minimum_required(VERSION 3.17)
project(sim960)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
find_package(Boost
		REQUIRED
		COMPONENTS program_options)
add_compile_definitions(-DSOFTFLOAT_ROUND_ODD
        -DINLINE_LEVEL=5
        -DSOFTFLOAT_FAST_DIV32TO16
        -DSOFTFLOAT_FAST_DIV64TO32
)
add_library(softfloat
        lib/SoftFloat-3e/source/s_compare96M.c
        lib/SoftFloat-3e/source/s_compare128M.c
        lib/SoftFloat-3e/source/s_shortShiftLeft64To96M.c
        lib/SoftFloat-3e/source/s_shortShiftLeftM.c
        lib/SoftFloat-3e/source/s_shiftLeftM.c
        lib/SoftFloat-3e/source/s_shortShiftRightM.c
        lib/SoftFloat-3e/source/s_shortShiftRightJam64.c
        lib/SoftFloat-3e/source/s_shortShiftRightJamM.c
        lib/SoftFloat-3e/source/s_shiftRightJam32.c
        lib/SoftFloat-3e/source/s_shiftRightJam64.c
        lib/SoftFloat-3e/source/s_shiftRightJamM.c
        lib/SoftFloat-3e/source/s_shiftRightM.c
        lib/SoftFloat-3e/source/s_countLeadingZeros8.c
        lib/SoftFloat-3e/source/s_countLeadingZeros16.c
        lib/SoftFloat-3e/source/s_countLeadingZeros32.c
        lib/SoftFloat-3e/source/s_countLeadingZeros64.c
        lib/SoftFloat-3e/source/s_addM.c
        lib/SoftFloat-3e/source/s_addCarryM.c
        lib/SoftFloat-3e/source/s_addComplCarryM.c
        lib/SoftFloat-3e/source/s_negXM.c
        lib/SoftFloat-3e/source/s_sub1XM.c
        lib/SoftFloat-3e/source/s_subM.c
        lib/SoftFloat-3e/source/s_mul64To128M.c
        lib/SoftFloat-3e/source/s_mul128MTo256M.c
        lib/SoftFloat-3e/source/s_approxRecip_1Ks.c
        lib/SoftFloat-3e/source/s_approxRecip32_1.c
        lib/SoftFloat-3e/source/s_approxRecipSqrt_1Ks.c
        lib/SoftFloat-3e/source/s_approxRecipSqrt32_1.c
        lib/SoftFloat-3e/source/s_remStepMBy32.c
        lib/SoftFloat-3e/source/8086/softfloat_raiseFlags.c
        lib/SoftFloat-3e/source/8086/s_f16UIToCommonNaN.c
        lib/SoftFloat-3e/source/8086/s_commonNaNToF16UI.c
        lib/SoftFloat-3e/source/8086/s_propagateNaNF16UI.c
        lib/SoftFloat-3e/source/8086/s_f32UIToCommonNaN.c
        lib/SoftFloat-3e/source/8086/s_commonNaNToF32UI.c
        lib/SoftFloat-3e/source/8086/s_propagateNaNF32UI.c
        lib/SoftFloat-3e/source/8086/s_f64UIToCommonNaN.c
        lib/SoftFloat-3e/source/8086/s_commonNaNToF64UI.c
        lib/SoftFloat-3e/source/8086/s_propagateNaNF64UI.c
        lib/SoftFloat-3e/source/8086/extF80M_isSignalingNaN.c
        lib/SoftFloat-3e/source/8086/s_extF80MToCommonNaN.c
        lib/SoftFloat-3e/source/8086/s_commonNaNToExtF80M.c
        lib/SoftFloat-3e/source/8086/s_propagateNaNExtF80M.c
        lib/SoftFloat-3e/source/8086/f128M_isSignalingNaN.c
        lib/SoftFloat-3e/source/8086/s_f128MToCommonNaN.c
        lib/SoftFloat-3e/source/8086/s_commonNaNToF128M.c
        lib/SoftFloat-3e/source/8086/s_propagateNaNF128M.c
        lib/SoftFloat-3e/source/s_roundToUI32.c
  lib/SoftFloat-3e/source/s_roundMToUI64.c
  lib/SoftFloat-3e/source/s_roundToI32.c
  lib/SoftFloat-3e/source/s_roundMToI64.c
  lib/SoftFloat-3e/source/s_normSubnormalF16Sig.c
  lib/SoftFloat-3e/source/s_roundPackToF16.c
  lib/SoftFloat-3e/source/s_normRoundPackToF16.c
  lib/SoftFloat-3e/source/s_addMagsF16.c
  lib/SoftFloat-3e/source/s_subMagsF16.c
  lib/SoftFloat-3e/source/s_mulAddF16.c
  lib/SoftFloat-3e/source/s_normSubnormalF32Sig.c
  lib/SoftFloat-3e/source/s_roundPackToF32.c
  lib/SoftFloat-3e/source/s_normRoundPackToF32.c
  lib/SoftFloat-3e/source/s_addMagsF32.c
  lib/SoftFloat-3e/source/s_subMagsF32.c
  lib/SoftFloat-3e/source/s_mulAddF32.c
  lib/SoftFloat-3e/source/s_normSubnormalF64Sig.c
  lib/SoftFloat-3e/source/s_roundPackToF64.c
  lib/SoftFloat-3e/source/s_normRoundPackToF64.c
  lib/SoftFloat-3e/source/s_addMagsF64.c
  lib/SoftFloat-3e/source/s_subMagsF64.c
  lib/SoftFloat-3e/source/s_mulAddF64.c
  lib/SoftFloat-3e/source/s_tryPropagateNaNExtF80M.c
  lib/SoftFloat-3e/source/s_invalidExtF80M.c
  lib/SoftFloat-3e/source/s_normExtF80SigM.c
  lib/SoftFloat-3e/source/s_roundPackMToExtF80M.c
  lib/SoftFloat-3e/source/s_normRoundPackMToExtF80M.c
  lib/SoftFloat-3e/source/s_addExtF80M.c
  lib/SoftFloat-3e/source/s_compareNonnormExtF80M.c
  lib/SoftFloat-3e/source/s_isNaNF128M.c
  lib/SoftFloat-3e/source/s_tryPropagateNaNF128M.c
  lib/SoftFloat-3e/source/s_invalidF128M.c
  lib/SoftFloat-3e/source/s_shiftNormSigF128M.c
  lib/SoftFloat-3e/source/s_roundPackMToF128M.c
  lib/SoftFloat-3e/source/s_normRoundPackMToF128M.c
  lib/SoftFloat-3e/source/s_addF128M.c
  lib/SoftFloat-3e/source/s_mulAddF128M.c
  lib/SoftFloat-3e/source/softfloat_state.c
  lib/SoftFloat-3e/source/ui32_to_f16.c
  lib/SoftFloat-3e/source/ui32_to_f32.c
  lib/SoftFloat-3e/source/ui32_to_f64.c
  lib/SoftFloat-3e/source/ui32_to_extF80M.c
  lib/SoftFloat-3e/source/ui32_to_f128M.c
  lib/SoftFloat-3e/source/ui64_to_f16.c
  lib/SoftFloat-3e/source/ui64_to_f32.c
  lib/SoftFloat-3e/source/ui64_to_f64.c
  lib/SoftFloat-3e/source/ui64_to_extF80M.c
  lib/SoftFloat-3e/source/ui64_to_f128M.c
  lib/SoftFloat-3e/source/i32_to_f16.c
  lib/SoftFloat-3e/source/i32_to_f32.c
  lib/SoftFloat-3e/source/i32_to_f64.c
  lib/SoftFloat-3e/source/i32_to_extF80M.c
  lib/SoftFloat-3e/source/i32_to_f128M.c
  lib/SoftFloat-3e/source/i64_to_f16.c
  lib/SoftFloat-3e/source/i64_to_f32.c
  lib/SoftFloat-3e/source/i64_to_f64.c
  lib/SoftFloat-3e/source/i64_to_extF80M.c
  lib/SoftFloat-3e/source/i64_to_f128M.c
  lib/SoftFloat-3e/source/f16_to_ui32.c
  lib/SoftFloat-3e/source/f16_to_ui64.c
  lib/SoftFloat-3e/source/f16_to_i32.c
  lib/SoftFloat-3e/source/f16_to_i64.c
  lib/SoftFloat-3e/source/f16_to_ui32_r_minMag.c
  lib/SoftFloat-3e/source/f16_to_ui64_r_minMag.c
  lib/SoftFloat-3e/source/f16_to_i32_r_minMag.c
  lib/SoftFloat-3e/source/f16_to_i64_r_minMag.c
  lib/SoftFloat-3e/source/f16_to_f32.c
  lib/SoftFloat-3e/source/f16_to_f64.c
  lib/SoftFloat-3e/source/f16_to_extF80M.c
  lib/SoftFloat-3e/source/f16_to_f128M.c
  lib/SoftFloat-3e/source/f16_roundToInt.c
  lib/SoftFloat-3e/source/f16_add.c
  lib/SoftFloat-3e/source/f16_sub.c
  lib/SoftFloat-3e/source/f16_mul.c
  lib/SoftFloat-3e/source/f16_mulAdd.c
  lib/SoftFloat-3e/source/f16_div.c
  lib/SoftFloat-3e/source/f16_rem.c
  lib/SoftFloat-3e/source/f16_sqrt.c
  lib/SoftFloat-3e/source/f16_eq.c
  lib/SoftFloat-3e/source/f16_le.c
  lib/SoftFloat-3e/source/f16_lt.c
  lib/SoftFloat-3e/source/f16_eq_signaling.c
  lib/SoftFloat-3e/source/f16_le_quiet.c
  lib/SoftFloat-3e/source/f16_lt_quiet.c
  lib/SoftFloat-3e/source/f16_isSignalingNaN.c
  lib/SoftFloat-3e/source/f32_to_ui32.c
  lib/SoftFloat-3e/source/f32_to_ui64.c
  lib/SoftFloat-3e/source/f32_to_i32.c
  lib/SoftFloat-3e/source/f32_to_i64.c
  lib/SoftFloat-3e/source/f32_to_ui32_r_minMag.c
  lib/SoftFloat-3e/source/f32_to_ui64_r_minMag.c
  lib/SoftFloat-3e/source/f32_to_i32_r_minMag.c
  lib/SoftFloat-3e/source/f32_to_i64_r_minMag.c
  lib/SoftFloat-3e/source/f32_to_f16.c
  lib/SoftFloat-3e/source/f32_to_f64.c
  lib/SoftFloat-3e/source/f32_to_extF80M.c
  lib/SoftFloat-3e/source/f32_to_f128M.c
  lib/SoftFloat-3e/source/f32_roundToInt.c
  lib/SoftFloat-3e/source/f32_add.c
  lib/SoftFloat-3e/source/f32_sub.c
  lib/SoftFloat-3e/source/f32_mul.c
  lib/SoftFloat-3e/source/f32_mulAdd.c
  lib/SoftFloat-3e/source/f32_div.c
  lib/SoftFloat-3e/source/f32_rem.c
  lib/SoftFloat-3e/source/f32_sqrt.c
  lib/SoftFloat-3e/source/f32_eq.c
  lib/SoftFloat-3e/source/f32_le.c
  lib/SoftFloat-3e/source/f32_lt.c
  lib/SoftFloat-3e/source/f32_eq_signaling.c
  lib/SoftFloat-3e/source/f32_le_quiet.c
  lib/SoftFloat-3e/source/f32_lt_quiet.c
  lib/SoftFloat-3e/source/f32_isSignalingNaN.c
  lib/SoftFloat-3e/source/f64_to_ui32.c
  lib/SoftFloat-3e/source/f64_to_ui64.c
  lib/SoftFloat-3e/source/f64_to_i32.c
  lib/SoftFloat-3e/source/f64_to_i64.c
  lib/SoftFloat-3e/source/f64_to_ui32_r_minMag.c
  lib/SoftFloat-3e/source/f64_to_ui64_r_minMag.c
  lib/SoftFloat-3e/source/f64_to_i32_r_minMag.c
  lib/SoftFloat-3e/source/f64_to_i64_r_minMag.c
  lib/SoftFloat-3e/source/f64_to_f16.c
  lib/SoftFloat-3e/source/f64_to_f32.c
  lib/SoftFloat-3e/source/f64_to_extF80M.c
  lib/SoftFloat-3e/source/f64_to_f128M.c
  lib/SoftFloat-3e/source/f64_roundToInt.c
  lib/SoftFloat-3e/source/f64_add.c
  lib/SoftFloat-3e/source/f64_sub.c
  lib/SoftFloat-3e/source/f64_mul.c
  lib/SoftFloat-3e/source/f64_mulAdd.c
  lib/SoftFloat-3e/source/f64_div.c
  lib/SoftFloat-3e/source/f64_rem.c
  lib/SoftFloat-3e/source/f64_sqrt.c
  lib/SoftFloat-3e/source/f64_eq.c
  lib/SoftFloat-3e/source/f64_le.c
  lib/SoftFloat-3e/source/f64_lt.c
  lib/SoftFloat-3e/source/f64_eq_signaling.c
  lib/SoftFloat-3e/source/f64_le_quiet.c
  lib/SoftFloat-3e/source/f64_lt_quiet.c
  lib/SoftFloat-3e/source/f64_isSignalingNaN.c
  lib/SoftFloat-3e/source/extF80M_to_ui32.c
  lib/SoftFloat-3e/source/extF80M_to_ui64.c
  lib/SoftFloat-3e/source/extF80M_to_i32.c
  lib/SoftFloat-3e/source/extF80M_to_i64.c
  lib/SoftFloat-3e/source/extF80M_to_ui32_r_minMag.c
  lib/SoftFloat-3e/source/extF80M_to_ui64_r_minMag.c
  lib/SoftFloat-3e/source/extF80M_to_i32_r_minMag.c
  lib/SoftFloat-3e/source/extF80M_to_i64_r_minMag.c
  lib/SoftFloat-3e/source/extF80M_to_f16.c
  lib/SoftFloat-3e/source/extF80M_to_f32.c
  lib/SoftFloat-3e/source/extF80M_to_f64.c
  lib/SoftFloat-3e/source/extF80M_to_f128M.c
  lib/SoftFloat-3e/source/extF80M_roundToInt.c
  lib/SoftFloat-3e/source/extF80M_add.c
  lib/SoftFloat-3e/source/extF80M_sub.c
  lib/SoftFloat-3e/source/extF80M_mul.c
  lib/SoftFloat-3e/source/extF80M_div.c
  lib/SoftFloat-3e/source/extF80M_rem.c
  lib/SoftFloat-3e/source/extF80M_sqrt.c
  lib/SoftFloat-3e/source/extF80M_eq.c
  lib/SoftFloat-3e/source/extF80M_le.c
  lib/SoftFloat-3e/source/extF80M_lt.c
  lib/SoftFloat-3e/source/extF80M_eq_signaling.c
  lib/SoftFloat-3e/source/extF80M_le_quiet.c
  lib/SoftFloat-3e/source/extF80M_lt_quiet.c
  lib/SoftFloat-3e/source/f128M_to_ui32.c
  lib/SoftFloat-3e/source/f128M_to_ui64.c
  lib/SoftFloat-3e/source/f128M_to_i32.c
  lib/SoftFloat-3e/source/f128M_to_i64.c
  lib/SoftFloat-3e/source/f128M_to_ui32_r_minMag.c
  lib/SoftFloat-3e/source/f128M_to_ui64_r_minMag.c
  lib/SoftFloat-3e/source/f128M_to_i32_r_minMag.c
  lib/SoftFloat-3e/source/f128M_to_i64_r_minMag.c
  lib/SoftFloat-3e/source/f128M_to_f16.c
  lib/SoftFloat-3e/source/f128M_to_f32.c
  lib/SoftFloat-3e/source/f128M_to_f64.c
  lib/SoftFloat-3e/source/f128M_to_extF80M.c
  lib/SoftFloat-3e/source/f128M_roundToInt.c
  lib/SoftFloat-3e/source/f128M_add.c
  lib/SoftFloat-3e/source/f128M_sub.c
  lib/SoftFloat-3e/source/f128M_mul.c
  lib/SoftFloat-3e/source/f128M_mulAdd.c
  lib/SoftFloat-3e/source/f128M_div.c
  lib/SoftFloat-3e/source/f128M_rem.c
  lib/SoftFloat-3e/source/f128M_sqrt.c
  lib/SoftFloat-3e/source/f128M_eq.c
  lib/SoftFloat-3e/source/f128M_le.c
  lib/SoftFloat-3e/source/f128M_lt.c
  lib/SoftFloat-3e/source/f128M_eq_signaling.c
  lib/SoftFloat-3e/source/f128M_le_quiet.c
  lib/SoftFloat-3e/source/f128M_lt_quiet.c
        lib/SoftFloat-3e/source/include/softfloat_types.h
        lib/SoftFloat-3e/source/include/softfloat.h
        lib/SoftFloat-3e/source/8086/specialize.h
        lib/SoftFloat-3e/build/Linux-i960-GCC/platform.h)
add_library(core960
		include/Entry255.def
		include/Opcodes.def
		include/BinaryOperations.h
		include/Core.h
		include/IAC.h
		include/Types.h
		src/Core.cc
		src/IAC.cc
		src/Interrupts.cc
		src/Faults.cc
		src/ProtectedArchitecture.cc
		src/NumericsArchitecture.cc
		src/StartupTests.cc
		src/MemoryArchitecture.cc
		src/CallOperations.cc
		src/RegisterOperations.cc
		include/Disassembly.h
        src/Interpreter.cc
        include/ProcessManagement.h
        include/SoftFloatWrapper.h
)
add_library(nativecore
		src/NativeCore.cc)

add_executable(sim5
		cmd/sim5/main.cc
		)
add_executable(mmu_test
		cmd/mmu_test/main.cc)
target_link_libraries(core960
        softfloat
)
target_link_libraries(nativecore
        core960
        softfloat
)
target_link_libraries(sim5
        softfloat
		core960
		nativecore
		Boost::program_options)
target_link_libraries(mmu_test
		core960
		nativecore
		)
install(TARGETS sim5 DESTINATION bin)

target_include_directories(core960 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include )
target_include_directories(mmu_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(softfloat PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/lib/SoftFloat-3e/source/include
        ${CMAKE_CURRENT_SOURCE_DIR}/lib/SoftFloat-3e/build/Linux-i960-GCC/
        ${CMAKE_CURRENT_SOURCE_DIR}/lib/SoftFloat-3e/source/8086
)
